force-app/main/default/objects/Partner_Role__c/Partner_Role__c.object-meta.xml
<CustomObject>
    <description>Link between two Accounts for a specific Opportunity</description>
    <label>Partner Role</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>P-Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>