force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_Channel_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_Channel_Mgr__c</fullName>
    <formula>Opportunity_Account__r.Channel_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Account Channel Mgr</label>
    <type>Text</type>
</CustomField>