force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_Country__c</fullName>
    <description>copied from Opportunity account to allow views.</description>
    <formula>Opportunity_Account__r.BillingCountry</formula>
    <inlineHelpText>Country in which the Opportunity Account resides.</inlineHelpText>
    <label>Opp Account Country</label>
    <type>Text</type>
</CustomField>