force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_Mismatch__c</fullName>
    <description>Identifier used for Apex Trigger to show Opportunity Account mismatch between Partner Role and Opportunity</description>
    <formula>IF(Opportunity_Account__c &lt;&gt; Opportunity__r.Opportunity_Account__c, true, false)</formula>
    <inlineHelpText>Identifier used for Apex Trigger to show Opportunity Account mismatch between Partner Role and Opportunity</inlineHelpText>
    <label>Opp Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>