force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_SF_Number__c</fullName>
    <formula>Opportunity_Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Account SF Number</label>
    <type>Text</type>
</CustomField>