force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_Site__c</fullName>
    <formula>Opportunity_Account__r.BillingCity</formula>
    <label>Opp Account Site</label>
    <type>Text</type>
</CustomField>