force-app/main/default/objects/Partner_Role__c/fields/Opp_Account_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account_uB_Office__c</fullName>
    <formula>text( Opportunity_Account__r.uB_Office__c )</formula>
    <label>Opp Account uB Office</label>
    <type>Text</type>
</CustomField>