force-app/main/default/objects/Partner_Role__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Roles (As Opportunity Account)</relationshipLabel>
    <relationshipName>R00N200000018BaOEAU</relationshipName>
    <type>Lookup</type>
</CustomField>