force-app/main/default/objects/Partner_Role__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Roles (As Partner Account)</relationshipLabel>
    <relationshipName>R00N20000000pWzvEAE</relationshipName>
    <type>Lookup</type>
</CustomField>