force-app/main/default/objects/Partner_Role__c/fields/Partner_Account_SF_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_SF_Number__c</fullName>
    <formula>Partner_Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account SF Number</label>
    <type>Text</type>
</CustomField>