force-app/main/default/objects/Partner_Role__c/fields/Partner_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel_Manager__c</fullName>
    <formula>Partner_Account__r.Channel_Manager__c</formula>
    <label>Partner Channel Manager</label>
    <type>Text</type>
</CustomField>