force-app/main/default/objects/Partner_Role__c/fields/Partner_Country__c.field-meta.xml
<CustomField>
    <fullName>Partner_Country__c</fullName>
    <description>copied from Partner Account for availability in list views and reports</description>
    <formula>Partner_Account__r.BillingCountry</formula>
    <inlineHelpText>Country in which the partner account resides</inlineHelpText>
    <label>Partner Country</label>
    <type>Text</type>
</CustomField>