force-app/main/default/objects/Partner_Role__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 Partner Referral (commissions required)</fullName>
            </value>
            <value>
                <fullName>0 Partner Referral (no commissions)</fullName>
            </value>
            <value>
                <fullName>1 Opportunity owner</fullName>
            </value>
            <value>
                <fullName>2 Ref. design / platform dev.</fullName>
            </value>
            <value>
                <fullName>3 Design house</fullName>
            </value>
            <value>
                <fullName>3 ODM (Design and Manufacturing)</fullName>
            </value>
            <value>
                <fullName>3 Local Module Maker</fullName>
            </value>
            <value>
                <fullName>4 Consultant/Advisor</fullName>
            </value>
            <value>
                <fullName>4 Certification partner</fullName>
            </value>
            <value>
                <fullName>4 Technology partner</fullName>
            </value>
            <value>
                <fullName>4 MNO / MVNO</fullName>
            </value>
            <value>
                <fullName>5 Former contract manufacturer</fullName>
            </value>
            <value>
                <fullName>5 Actual contract manufacturer</fullName>
            </value>
            <value>
                <fullName>5 Potential contract manufacturer</fullName>
            </value>
            <value>
                <fullName>6 Sourcing / Negotiation entity</fullName>
            </value>
            <value>
                <fullName>6 Purchasing entity</fullName>
            </value>
            <value>
                <fullName>7 Distributor</fullName>
            </value>
            <value>
                <fullName>8 Sales representative</fullName>
            </value>
            <value>
                <fullName>8 Agent</fullName>
            </value>
            <value>
                <fullName>9 Customer of opp. owner</fullName>
            </value>
            <value>
                <fullName>9 Car brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>