force-app/main/default/objects/Partner_Role__c/fields/Partner_Site__c.field-meta.xml
<CustomField>
    <fullName>Partner_Site__c</fullName>
    <formula>Partner_Account__r.BillingCity</formula>
    <label>Partner Site</label>
    <type>Text</type>
</CustomField>