force-app/main/default/objects/Partner_Role__c/fields/Partner_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Partner_uB_Office__c</fullName>
    <formula>text( Partner_Account__r.uB_Office__c )</formula>
    <label>Partner uB Office</label>
    <type>Text</type>
</CustomField>